<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_title_general">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/prefs_key_send_drive_off_sms"
            android:summary="@string/prefs_send_drive_off_sms_summary"
            android:title="@string/prefs_send_drive_off_sms" />
        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/prefs_min_before_sms"
            android:entries="@array/pref_min_before_sms_entries"
            android:entryValues="@array/pref_min_before_sms_values"
            android:key="@string/prefs_key_min_before_sms"
            android:summary="@string/prefs_min_before_sms_summary"
            android:title="@string/prefs_min_before_sms" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_title_about">
        <Preference
            android:selectable="false"
            android:summary="@string/prefs_made_from_summary" />
        <Preference
            android:selectable="false"
            android:summary="@string/prefs_made_with_summary" />
    </PreferenceCategory>
</PreferenceScreen>