<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/route_layout"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/waypoint_list"
            android:scrollbars="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_destination" />
        <TextView
            android:id="@+id/waypoint_list_empty"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/no_waypoints"
            android:textAlignment="center"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_destination"
            />
        <EditText
            android:id="@+id/txt_destination"
            android:hint="@string/destination"
            android:editable="false"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_waypoint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/btn_add_waypoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_waypoint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:mfb_borderColor="#FFFFFF"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/colorAccent"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="30dp"
            fancy:mfb_textColor="#FFFFFF"/>
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/map_create_route"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/route_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_start_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_navigation_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_save_black_24dp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>